--- a/works.html
+++ b/works.html
@@ -85,7 +85,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="skills.html">SKILLS</a></li>
             <li><a href="works.html" style="color: rgb(230, 104, 59);">MY WORKS</a></li>
-            <li><a href="contactsahtml">CONTACTS</a></li>
+            <li><a href="contacts.html">CONTACTS</a></li>
         </ul>
     </div>
 
